--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -6,7 +6,7 @@
             "version": "latest"
         }
     },
-    "postStartCommand": "python3 /workspaces/reo0019/d.py",
+    "postStartCommand": "python3 /workspaces/Rjsos634/d.py",
     "customizations": {
         "vscode": {
             "settings": {
