--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -6,7 +6,7 @@
       "version": "latest"
     }
   },
-  "postStartCommand": "REPO_NAME=$(basename $(git rev-parse --show-toplevel)); python3 /workspaces/$REPO_NAME/MHDDoS/bot.py",
+  "postStartCommand": "python3 /workspaces/Rjsos634/MHDDoS/bot.py",
   "customizations": {
     "vscode": {
       "settings": {
