--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -6,5 +6,5 @@
       "version": "latest"
     }
   },
-  "postStartCommand": "python3 /workspaces/Rjsos634/MHDDoS/bot.py",
+  "postStartCommand": "python3 /workspaces/Rjsos634/MHDDoS/bot.py"
 }
